# LwM2M-Server

./: .clang-tidy  .gitignore  .gitlab-ci-templates.yml  .gitlab-ci.yml  .gitmodules  .hspt-cpp  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  NOTICE  README.md  ci-variables.yml  conanfile.py  conanfile.txt
conan/: conanfile.py
sources/: CMakeLists.txt
sources/Binding_Interface/: CMakeLists.txt  Dispatcher.cpp  Registrator.cpp  RequestsManager.cpp  RequestsManagerInterface.cpp  ResponseHandler.cpp
sources/Client/: CMakeLists.txt  DummyClient.cpp  UDPClient.cpp
sources/CoAP/: CMakeLists.txt  CoAP_Message.cpp
sources/CoAP/Core/: CMakeLists.txt  CoAP_Header.cpp  CoAP_Option.cpp
sources/CoAP/Message/: CMakeLists.txt  CoAP_Message.cpp
sources/CoAP/Option_Builder/: CMakeLists.txt  Option_Builder.cpp
sources/CoAP/Options/: Accept.cpp  CMakeLists.txt  ContentFormat.cpp  ETag.cpp  IfMatch.cpp  IfNoneMatch.cpp  LocationPath.cpp  LocationQuery.cpp  MaxAge.cpp  ProxyScheme.cpp  ProxyUri.cpp  Size1.cpp  UriHost.cpp  UriPath.cpp  UriPort.cpp  UriQuery.cpp
sources/CoAP/Payload_Decoder/: CMakeLists.txt  PayloadDecoder.cpp
sources/CoAP/Payload_Formats/: CMakeLists.txt  CoRE_Link.cpp  PlainText.cpp  RawBytePack.cpp
sources/CoAP/Server/: CMakeLists.txt  CoAP_Server.cpp
sources/CoAP_Binding/: CMakeLists.txt  CoAP_Binding.cpp  CoAP_Config.cpp  CoAP_ContentTypes.cpp  CoAP_Decoder.cpp  CoAP_Encoder.cpp  CoAP_RequestsManager.cpp  CoAP_Server.cpp  RegistrationInterfaceRequestsBuilder.cpp  RegistrationInterfaceRequestsBuilder.hpp  Utility.hpp
sources/Converter/: CMakeLists.txt  CoAP_MessageConverter.cpp  Converter.cpp  LwM2M_MessageConverter.cpp  LwM2M_To_CoAP.cpp  MessageProcessorManager.cpp
sources/Device_Model/: CMakeLists.txt  Device.cpp  ElementAddress.cpp  Executable.cpp  Object.cpp  ObjectDescriptor.cpp  ObjectInstance.cpp  Observable.cpp  RangeEnumeration.cpp  ReadAndWritable.cpp  Readable.cpp  Resource.cpp  ResourceDescriptor.cpp  Writable.cpp
sources/Device_Registry/: CMakeLists.txt  DeviceRegistry.cpp  RegistryEvent.cpp
sources/Example/: CMakeLists.txt  Example.cpp  Example.hpp  Observer.cpp  Observer.hpp  main.cpp
sources/LwM2M/: CMakeLists.txt
sources/LwM2M/Core/: CMakeLists.txt  LwM2M_CoreLink.cpp  LwM2M_ObjectLink.cpp  LwM2M_RangeEnumeration.cpp  LwM2M_TLV.cpp
sources/LwM2M/Device_Model/: CMakeLists.txt  LwM2M_Device.cpp  LwM2M_Object.cpp  LwM2M_ObjectInstance.cpp  LwM2M_ResourceDescriptor.cpp
sources/LwM2M/Device_Registry/: CMakeLists.txt  DeviceRegistry.cpp
sources/LwM2M/Interfaces/: CMakeLists.txt  RegIstrationInterface.cpp  RegistrationInterface.cpp
sources/LwM2M/LwM2M_Model/: CMakeLists.txt  DeviceManagmentInterfaceMessages.cpp  InformationReportingInterfaceMessages.cpp  LwM2M_Device.cpp  LwM2M_Message.cpp  LwM2M_Object.cpp  LwM2M_ObjectDescriptor.cpp  LwM2M_ObjectInstance.cpp  LwM2M_Resource.cpp  LwM2M_ResourceDescriptor.cpp  RegistrationInterfaceMessages.cpp
sources/LwM2M/Message_Converter/: CMakeLists.txt  CoAP_To_LwM2M.cpp  LwM2M_To_CoAP.cpp  MessageProcessingThreadPool.cpp  MessageProcessorManager.cpp  MessageSorter.cpp
sources/LwM2M/Message_Decoder/: CMakeLists.txt  CoAP_Decoder.cpp  CoAP_DeviceManagmentMessageDecoder.cpp  CoAP_RegistrationMessageDecoder.cpp
sources/LwM2M/Message_Encoder/: CMakeLists.txt  CoAP_Encoder.cpp
sources/LwM2M/Messages/: CMakeLists.txt
sources/LwM2M/Registry_Handler/: CMakeLists.txt  RegistryHandler.cpp
sources/LwM2M/Response_Handler/: CMakeLists.txt  Response_Handler.cpp
sources/LwM2M/Server/: CMakeLists.txt  LwM2M_Config.cpp  LwM2M_Server.cpp
sources/LwM2M/XML_Parser/: CMakeLists.txt  XmlParser.cpp
sources/LwM2M_Model/: CMakeLists.txt  InformationReportingInterfaceMessages.cpp  LwM2M_Message.cpp  RegistrationInterfaceMessages.cpp
sources/Messages/: CMakeLists.txt  DataFormat.cpp  ElementID.cpp  Endpoint.cpp  Message.cpp  ModelType.cpp  ObjectLink.cpp  TLV.cpp
sources/Messages/Device_Managment_Messages/: Create.cpp  Delete.cpp  Discover.cpp  Execute.cpp  Read.cpp  ReadComoposite.cpp  ReadComposite.cpp  Write.cpp  WriteAttributes.cpp  WriteComoposite.cpp  WriteComposite.cpp
sources/Messages/Information_Reporting_Messages/: CancelObservation.cpp  CancelObserveComposite.cpp  Notify.cpp  Observe.cpp  ObserveComposite.cpp  Send.cpp
sources/Messages/Registration_Messages/: Deregister.cpp  DeviceMetaInfo.cpp  Register.cpp  Update.cpp
sources/Observer_Pattern/: CMakeLists.txt
sources/PayloadFormat/: CMakeLists.txt  LwM2M_Opaque.cpp  LwM2M_PlainText.cpp  LwM2M_TLV.cpp
sources/Runner/: CMakeLists.txt  Example.cpp  Example.hpp  Observer.cpp  Observer.hpp  main.cpp
sources/Server/: CMakeLists.txt  CoAP_Server.cpp  Config.cpp  Server.cpp  UDPServer.cpp
sources/Stoppable/: CMakeLists.txt  StoppableTask.cpp
sources/Threadsafe_Queue/: CMakeLists.txt
sources/Utility/: CMakeLists.txt  PrimitiveConverter.cpp  StringSpliter.cpp
sources/Variant_Visitor/: CMakeLists.txt
sources/XMLParser/: CMakeLists.txt  XmlParser.cpp
sources/XML_Parser/: CMakeLists.txt  XmlParser.cpp
unit_tests/: CMakeLists.txt  testRunner.cpp
unit_tests/LwM2M/: MockExceptionHandler.hpp
unit_tests/LwM2M/Binding_Interface/: MockDispatcher.hpp  MockRequestsManager.hpp  RegistratorTests.cc  RequestsManagerInterface.cc  RequestsManagerInterfaceTests.cc
unit_tests/LwM2M/Device_Model/: BooleanResourceTests.cc  FloatResourceTests.cc  ObjectLinkResourceTests.cc  OpaqueResourceTests.cc  ReadableTests.cc  ResourceTestSharedInfo.hpp  ResourceTests.cc  SignedIntResourceTests.cc  StringResourceTests.cc  TestRequester.hpp  UnsignedIntResourceTests.cc
unit_tests/LwM2M/Device_Registry/: DeviceRegistryTests.cc
unit_tests/LwM2M/Messages/: DataFormatTests.cc  MessageTests.cc
unit_tests/LwM2M/XML_Parser/: XmlParserTests.cc  XmlParserTests.cpp
unit_tests/Observer_Pattern_TestSuite/: EventBroadcasterTests.cc  EventListenerTests.cc  EventSourceTests.cc  ObserverPatterTestsShared.hpp
unit_tests/ThreadsafeQueue_TestsSuite/: CoAPMessageTests.cc  ThreadsafeHashSetTests.cc  ThreadsafeQueueTests.cc  ThreadsafeUniqueQueueTests.cc
(+312 files in other folders)
