cmake_minimum_required(VERSION 3.6) 

add_subdirectory(Core)
add_subdirectory(XML_Parser)
add_subdirectory(Messages)
add_subdirectory(Device_Model)
add_subdirectory(Response_Handler)
add_subdirectory(Message_Encoder)
add_subdirectory(Message_Decoder)
add_subdirectory(Device_Registry)
add_subdirectory(Server)